# cpp-tests

./: README.md
DataOrientedApproach/: CollisionHandlerOOP.cpp  CollisionHandlerOOP.h  CollisionSolver.cpp  CollisionSolver.h  Color.h  Graphics.cpp  Graphics.h  GraphicsDX11.cpp  GraphicsDX11.h  Grid.cpp  Grid.h  Main.cpp  Math.h  Shape.cpp  Shape.h  ShapesDX11.cpp  ShapesDX11.h  ShapesDemoDX11.cpp  ShapesDemoDX11.h  ShapesOOP.cpp  ShapesOOP.h  Vec2.h  Wall.h  Window.cpp  Window.h
Delegate/: Delegate.cpp  Delegate.h  Dispatcher.h  FunctionDispatcher.h  Main.cpp  Utils.h
OperationPerformance/: Main.cpp
StringArgsFunction/: StringArgsFunction.cpp
a_star/: AStar.cpp  AStar.h  Config.cpp  Config.h  Main.cpp
custom_command_test/: CMakeLists.txt
custom_command_test/src/: CMakeLists.txt
custom_command_test/src/resources/: FragmentShader.frag  VertexShader.vert
directx_1/DirectX_1/: DirectX_1.sln  DirectX_1.vcxproj  DirectX_1.vcxproj.filters  Globals.h  GraphicsClass.cpp  GraphicsClass.h  InputClass.cpp  InputClass.h  Main.cpp  Pixel.hlsl  SystemClass.cpp  SystemClass.h  Vertex.hlsl
directx_2/DirectX/: DirectX.sdf  DirectX.sln  DirectX.vcxproj  DirectX.vcxproj.filters
functional/: .gitignore  CellsRange.h  Main.cpp  Math.h  PixelShader.hlsl  README.md  Shape.h  apply_velocities.cpp  calculate_cells_ranges.cpp  calculate_positions_and_bounds.cpp  create_shapes.cpp  functional.vcxproj.filters  solve_collisions.cpp  update_simulation.cpp
qt_signal_test/: main.cpp  mainapplication.cpp  mainapplication.h  myobject.cpp  myobject.h  qt_signal_test.pro
write_to_file/: main.cpp
(+127 files in other folders)
